--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link
-      href="https://fonts.googleapis.com/css?family=Do+Hyeon&display=swap"
+      href="https://fonts.googleapis.com/css?family=Wallpoet&display=swap"
       rel="stylesheet"
     />
     <title>Kryptodash</title>
