updated to material-ui

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link
-      href="https://fonts.googleapis.com/css?family=Wallpoet&display=swap"
+      href="https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+
     <title>Kryptodash</title>
   </head>
   <body>
